--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.4"
+    "react-scripts": "2.0.4",
+    "underscore": "^1.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
