--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^3.3.7",
     "create-react-app": "^2.0.3",
     "google-map-react": "^1.0.9",
+    "netlify-lambda": "^1.0.2",
     "react": "^16.5.2",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.2",
