--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ajv": "^6.5.4",
     "bootstrap": "^3.3.7",
     "create-react-app": "^2.0.3",
     "google-map-react": "^1.0.9",
